# MobilityDB

./: .codacy.yml  .editorconfig  .gitignore  .gitmodules  .prospector.yaml  .pydocstyle  .travis.yml  .travis_osx.yml  .travis_xenial.yml  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE.txt  README.md  code-of-conduct.md  compile_commands.json  control.in  cppcheck-mobilitydb.cfg  cppcheck-suppressions.txt  index.html  index.md  mobdb_version.txt  selfunc_names.txt  setup.cfg  stepwise.test.sql  tempPoint_testcases.sql  temporal_tnumber_testcases.sql
clipper2/: CMakeLists.txt
contrib/pcl/: CMakeLists.txt  README.md  mobilitydb_pcl.control.in
contrib/pdal/: CMakeLists.txt  README.md  doxygen_pdal_plugin.h
doc/: CMakeLists.txt  box_types.xml  data_generator.pot  data_generator.xml  doc-alignment-status.md  docbook.css  epub.xsl  genpotfiles.sh  genxmlfiles.sh  index.md  install.sh  introduction.pot  introduction.xml  manipulating_box_types.pot  manipulating_box_types.xml  manipulating_temporal_types.pot  manipulating_temporal_types.xml  manipulating_temporal_types_p1.xml  manipulating_temporal_types_p2.xml  manipulating_temporal_types_p3.xml  mobilitydb-datagen.xml  mobilitydb-intro.xml  mobilitydb-manual.pot  mobilitydb-manual.xml  mobilitydb-workshop.xml  mobilitydb-workshop_berlinmod.xml  mobilitydb.xml  portable_sql.xml  python_tutorial.py  reference.pot  reference.xml  save.xml  set_span_types.xml  span_time_types.xml  spatial_functions.xml  temporal_alpha.xml  temporal_circular_buffers.xml  temporal_h3_index.xml  temporal_jsonb.xml  temporal_network_points.pot  (+28 more)
doc/.tx/: config
doc/contributing/: cross_type_parity.md  new_temporal_type.md  repo-handoff.md  reviewer-guide.md  talpha_design_notes.md  type_parity_methodology.md
doc/drafts/: PHASE_8_MILESTONE.md
doc/edge-to-cloud/: README.md
doc/es/: box_types.xml  data_generator.po  data_generator.pot  data_generator.xml  introduction.po  introduction.pot  introduction.xml  introduction.xml.po  manipulating_box_types.po  manipulating_box_types.pot  manipulating_box_types.xml  manipulating_temporal_types.po  manipulating_temporal_types.pot  manipulating_temporal_types.xml  manipulating_temporal_types_p1.xml  manipulating_temporal_types_p2.xml  manipulating_temporal_types_p3.xml  mobilitydb-manual.po  mobilitydb-manual.pot  mobilitydb-manual.xml  portable_sql.xml  reference.po  reference.pot  reference.xml  reference.xml.po  set_span_types.xml  span_time_types.xml  spatial_functions.xml  temporal_alpha.xml  temporal_circular_buffers.xml  temporal_h3_index.xml  temporal_jsonb.xml  temporal_network_points.po  temporal_network_points.pot  temporal_network_points.xml  temporal_pointcloud.xml  temporal_poses.xml  temporal_quadbin_index.xml  temporal_raster.xml  temporal_rigid_geometries.xml  (+20 more)
doc/images/: WLOF.vsdx  meos_ecosystem.drawio  srf.vsd  srf.vsdx  streaming.vsdx  tiling.vsdx  tsample.vsdx  tspatial.drawio
doc/methodology/: cross_type_parity.md  cross_type_parity_report.md
doc/specs/: _template.md  meos-api-0.1-draft.md  meos-wkb-0.9.md
doc/temporal-parquet/: README.md  arrow-interchange-instantiation.md  beta-testing.md  mobility-platform-interoperability.md
doxygen/: CMakeLists.txt  Doxyfile  Doxyfile_gha  Doxyfile_test
doxygen/html/: annotated.html  classes.html  dir_000012_000013.html  dir_000012_000014.html  dir_000013_000012.html  dir_000014_000012.html  dir_000015_000012.html  dir_000015_000014.html  dir_000018_000012.html  dir_000018_000013.html  dir_0190911f81a924d51f512fe6753df938.html  dir_0190911f81a924d51f512fe6753df938_dep.map  dir_13e138d54eb8818da29c3992edef070a.html  dir_26d7a359cc300ad02ab2f844fb9658eb.html  dir_289a9db7f5db18fcebe2284c66b05f94.html  dir_3e4011b093e9094a5bbfad1e0d15235b.html  dir_4357d7f886768d31549ecf9683d2f3f5.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_69a8456afe3f741dcdc230b8c1d23abb.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_d7ebddd74a69eada39287d8daa03c046.html  dir_d7ebddd74a69eada39287d8daa03c046_dep.map  dir_d7ebddd74a69eada39287d8daa03c046_dep.md5  dir_e9d2c87952e388da8e570b477721a3fc.html  dir_f59069e834fbed27be5aa2a5d523e2f9.html  dir_f59069e834fbed27be5aa2a5d523e2f9_dep.map  dir_f59069e834fbed27be5aa2a5d523e2f9_dep.md5  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  (+70 more)
doxygen/latex/: annotated.tex  dir_0190911f81a924d51f512fe6753df938.tex  dir_0190911f81a924d51f512fe6753df938_dep.md5  dir_028bd117f70e5aab6c59ae2369bd9cd2.tex  dir_0ec22a1050222376114c49a96266ed16.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_26d7a359cc300ad02ab2f844fb9658eb.tex  dir_4357d7f886768d31549ecf9683d2f3f5.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_69a8456afe3f741dcdc230b8c1d23abb.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d7ebddd74a69eada39287d8daa03c046.tex  dir_f59069e834fbed27be5aa2a5d523e2f9.tex  dir_f89abcb304c928c7d889aa5625570de5.tex  files.tex  (+1 more)
h3-pg/: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  H3PG_REVISION  META.json.in  Makefile  README.md
meos/: CMakeLists.txt
mobilitydb/: CMakeLists.txt
pgtypes/: CMakeLists.txt  c.h  miscadmin.h  pg_bool.h  pg_config.h.in  pg_date.h  pg_float.h  pg_int.h  pg_interval.h  pg_json.h  pg_numeric.h  pg_text.h  pg_time.h  pg_timestamp.h  pgtime.h  pgtypes.h  port.h  postgres.h
pointcloud-pg/: .cirrus.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  COPYRIGHT  Makefile  NEWS  POINTCLOUD_REVISION  README.md  autogen.sh  config.mk.in  configure.ac
postgis/: CMakeLists.txt  postgis_config.h  postgis_config.h.in  postgis_revision.h
postgres/: CMakeLists.txt  c.h  pg_config.h.in  pgtime.h  port.h  postgres.h
sql/: CMakeLists.txt  mobilitydb.control
(+63783 files in other folders)
